--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=RestauranteGood
-spring.datasource.url=jdbc:mysql://localhost:3306/galegre
+
+##cambiar el nombre de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/saboresperuanos
 server.port=8087
 
 spring.datasource.username=root
@@ -24,3 +26,14 @@ spring.servlet.multipart.max-request-size=50MB
 ##Para que no convierta nada
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+## Para el correo
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tu_correo@gmail.com
+spring.mail.password=tu_contraseña_de_aplicacion
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
