--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=RestauranteGood
-spring.datasource.url=jdbc:mysql://localhost:3306/galegre
+spring.datasource.url=jdbc:mysql://localhost:3306/sp_restaurante
 server.port=8087
 
 spring.datasource.username=root
@@ -24,3 +24,8 @@ spring.servlet.multipart.max-request-size=50MB
 ##Para que no convierta nada
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.debug=true
