--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         </dependency>
+        
+
+        <!-- Dependencia para email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
 
         <!-- Dependencia Servlet API (si necesitas usar la API de Servlets directamente) -->
         <dependency>
