--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 ## Para el correo
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jose123carrion456@gmail.com
-spring.mail.password=hapjgvnohthjllok
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
