--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=RestauranteGood
-spring.datasource.url=jdbc:mysql://localhost:3306/sp_restaurante
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurantedb_sp
 server.port=8087
 
 spring.datasource.username=root
